<resources>

    <string name="app_name">StopMotion</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="title_activity_main">Stop motion</string>
    
    <!-- file strings -->
    <string name="image_storage_file">StopMotionImages</string>
    <string name="movie_storage_file">StopMotionMovies</string>
    
    <!-- twitter access -->
    <string name="twitter_consumer_key">rWOOhjoKG2BDKrFshY6Q</string>
    <string name="twitter_consumer_secret">xKFBxr77tTW4HwhwgbVeUAkayA3PoSuIr6URVpaM8o</string>
    <string name="twitter_request_token_url">https://api.twitter.com/oauth/request_token</string>
    <string name="twitter_authorize_url">https://api.twitter.com/oauth/authorize</string>
    <string name="twitter_access_token_url">https://api.twitter.com/oauth/access_token</string>
    
    <string name="twitter_access_token">296734281-fHgj2EQAOb74poSpZfHo6ejTKU5hV8KhRSCNbkls</string>
    <string name="twitter_access_secret">afKfJI9IMPrseYxj01NYqOTTQzyDZYQw7XZfCjl2JU</string>
    
    <!-- post images on twitter -->
    <string name="twitpic_api_key">b5d33c6832c60e1f920efe96ca5cabaf</string>
    
    <!-- main menu -->
    <string name="menu_create_new">Create new</string>
    <string name="menu_share">Share on twitter</string>
    
    <!-- strings specific for the main list -->
    <string name="main_empty">You have not created any movies yet</string>
    <string name="main_create_new">Create new movie</string>
    <string name="main_remove">Remove movie</string>
    <string name="main_remove_verification">Sure you want to remove this movie?</string>
    <string name="main_edit">Edit movie</string>
    <string name="main_play">Play movie</string>
    <string name="main_share">Share on Twitter</string>
    
    <!-- strings specific for creating a new movie -->
    <string name="create_instruction">You have to add a picture</string>
    <string name="create_add">Add new picture</string>
    <string name="create_finish">Finish</string>
    
    <!-- strings specific for the settings -->
    <string name="settings_hint">Title</string>
    <string name="settings_save">Save</string>
    <string name="settings_discard">Discard</string>
    <string name="settings_discard_msg">Are you sure you want to discard the movie without saving?</string>
    <string name="settings_yes">Yes</string>
    <string name="settings_no">No</string>
    <string name="settings_saving">Saving, please wait</string>
    <string name="setting_save_verification">Your stop motion movie is saved!</string>
    <string name="settings_file_name_notification">The name can only contain letters a-z.</string>
    
    <!-- strings specific for twitter connection activity -->
    <string name="twitter_login_instruction">You have to login to twitter</string>
    <string name="twitter_hint_username">Username or e-mail</string>
    <string name="twitter_hint_password">Password</string>
    <string name="twitter_button_login">Login</string>
    
    <!-- strings specific for sending tweets -->
    <string name="send_tweet">Send tweet</string>
    <string name="send_tweet_sending">Sending</string>
    <string name="send_tweet_sent">Your message has now been posted on Twitter</string>
    
    

</resources>